# Ferret-cli

./: Cargo.toml
src/: cli.rs  main.rs
src/commands/: mod.rs  shell.rs  toggle.rs  wallpaper.rs
src/utils/: gen_scheme.rs  hypr.rs  math.rs  mod.rs  notify.rs  palettes.rs  paths.rs  scheme.rs  score.rs
